created wireframe page

--- a/pages/project1/project1-the-casestudy.html
+++ b/pages/project1/project1-the-casestudy.html
@@ -69,9 +69,9 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project | AI Content & SEO Portfolio Project by Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app",
-        "description": "Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions.",
+        "name": "Tech Trends Project Case Study | Genny Allison",
+        "url": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html",
+        "description": "Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance.",
         "inLanguage": "en",
         "datePublished": "2024-11-15",
         "dateModified": "2025-05-19",
@@ -94,6 +94,12 @@
               "position": 2,
               "name": "Projects",
               "item": "https://tech-trends-blog.netlify.app/projects"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Tech Trends Case Study",
+              "item": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html"
             }
           ]
         },
@@ -122,21 +128,40 @@
           "@type": "ImageObject",
           "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
           "width": 748,
-          "height": 400
+          "height": 400,
+          "caption": "Hero image of Tech Trends Project Case Study",
+          "encodingFormat": "image/avif"
         },
         "mainEntity": {
-          "@type": "CreativeWork",
-          "name": "Tech Trends Blog",
-          "about": [
-            "AI Content Creation",
-            "SEO Optimization",
-            "Web Performance",
-            "WCAG Accessibility",
-            "UI/UX Design"
-          ]
+          "@type": "BlogPosting",
+          "headline": "Tech Trends Project Case Study",
+          "alternativeHeadline": "AI Content Creation, SEO Optimization & Responsive Web Design by Genny Allison",
+          "articleSection": "Case Study",
+          "genre": ["Technology", "AI Content", "SEO", "Web Design", "Development"],
+          "keywords": [
+            "AI-generated content for websites",
+            "SEO content specialist",
+            "AI content creation portfolio",
+            "SEO case study blog",
+            "fast-loading website design"
+          ],
+          "author": {
+            "@type": "Person",
+            "name": "Genny Allison"
+          },
+          "publisher": {
+            "@type": "Organization",
+            "name": "Allison Stock Inc."
+          },
+          "datePublished": "2024-11-15",
+          "dateModified": "2025-05-19",
+          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
+          "url": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html",
+          "description": "Case study of Tech Trends Blog by Genny Allison, highlighting AI-generated content, SEO strategies, performance optimization, and accessible web development."
         }
       }
     </script>
+
     <style>
       .canvas-skills-grid {
         display: flex;
