adjusted image width and height

--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -467,7 +467,7 @@
         <h2>project 1 | the design</h2>
         <h2>past meets future</h2>
       </div>
-      <div class="past-meets-future">
+      <div class="past-meets-design">
         <div class="past-meets-future fancy-border-img">
           <picture>
             <source
@@ -510,7 +510,7 @@
         <h2>project 1 | the frame</h2>
       </div>
       <div class="wireframe">
-        <div class="wireframe-img fancy-border-img images2" id="wireframe-img1">  
+        <div class="wireframe-img fancy-border-img" id="wireframe-img1">  
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1985/v1742921918/homepage-wireframe-tech-trends_s2lkfs.avif"
@@ -537,7 +537,7 @@
             />
           </picture>
         </div>
-        <div class="wireframe-img fancy-border-img images2" id="wireframe-img2">  
+        <div class="wireframe-img fancy-border-img" id="wireframe-img2">  
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1057/v1747145733/category-wireframe-tech-trends_ughnnv.avif"
@@ -564,7 +564,7 @@
             />
           </picture>
         </div>
-        <div class="wireframe-img fancy-border-img images2" id="wireframe-img3">
+        <div class="wireframe-img fancy-border-img" id="wireframe-img3">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_585,h_1990/v1742921918/article-wireframe-tech-trends_mz3vf6.avif"
