--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -471,22 +471,24 @@
         <div class="past-meets-future fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_384/v1747144506/past-meets-future_pmafy7.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1747144506/past-meets-future_pmafy7.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_358/v1747144506/past-meets-future_pmafy7.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_300/v1747144506/past-meets-future_pmafy7.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_238/v1747144506/past-meets-future_pmafy7.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_256/v1747144506/past-meets-future_pmafy7.avif"
               alt="Tech Trends Blog Hero Image showcasing a modern, AI-powered platform for technology insights"
-          
+              width="256"
+              height="343"
               loading="auto"  
+              style="aspect-ratio: 256 / 242; object-fit: cover;"
               fetchpriority="auto"
               decoding="async"
             />
@@ -532,7 +534,7 @@
               height="926"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: cover; aspect-ratio: 273 / 926;"
               decoding="async" 
             />
           </picture>
@@ -559,7 +561,7 @@
               height="486"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: cover; aspect-ratio: 273 / 486;"
               decoding="sync"   
             />
           </picture>
@@ -586,7 +588,7 @@
               height="926"
               loading="lazy"
               fetchpriority="low"
-              style="object-fit: cover;"
+              style="object-fit: cover; aspect-ratio: 273 / 926;"
               decoding="async" 
             />
           </picture>
