replaced footer with duplicate of template

--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -594,129 +594,155 @@
           </picture>
         </div>
       </div>
-      <section id="contact">
-        <div class="author-bio-container fancy-border-img images" id="author-bio">
+      <div class="author-bio-container fancy-border-img" id="author-bio">
           <picture> 
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_632,h_275/v1746550616/allisonstock-black-logo_yalqqx.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_472,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_489,h_200/v1746550616/allisonstock-black-logo_yalqqx.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_427,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="/img/allisonstock-black-logo-mobile.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_40,c_fill,w_368,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif" 
+              width="268" 
+              height="116" 
               alt="Photo of Genny Allison, the web developer and AI content specialist"
-              width="267"
-              height="112"
-              loading="lazy"
-              fetchpriority="low"
-              style="object-fit: cover;"
+              style="aspect-ratio: 268 / 116; object-fit: contain;"
+              loading="auto" 
               decoding="async" 
             />
           </picture> 
           <div class="author-bio-text">
-            <h2>Partner with an AI Content Specialist & Web Developer</h2>
+            <h3>Partner with an AI Content Specialist & Web Developer</h3>
             <p><i>Looking for someone who can combine creativity,<br> cutting-edge AI tools, and technical expertise to build<br> stunning web platforms and engaging content?<br> You've come to the right place.</i></p>
             <p>At <strong>Allison Stock Inc.</strong>, I specialize in AI-powered content creation and web development using tools like ChatGPT, Midjourney, Figma, and Uizard. My portfolio showcases my ability to integrate AI solutions seamlessly into modern web design, delivering high-performing, SEO-optimized websites and content tailored to today's digital demands.</p>
-            <p>
+            <p>Connect with me on 
               <a href="https://www.linkedin.com/in/genny-allison/" 
                 target="_blank" 
                 rel="noopener noreferrer" 
-                aria-label="Visit Genny Allison's LinkedIn on a new tab">Connect with me on LinkedIn
-              </a>, 
+                aria-label="Visit Genny Allison's LinkedIn on a new tab">LinkedIn
+              </a>, explore my 
               <a href="https://gennyallison.netlify.app"
                 target="_blank" 
                 rel="noopener noreferrer" aria-label="Visit Genny Allison's professional portfolio on a new tab"
-                >explore my portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
+                >portfolio</a>, or visit my <a href="/pages/contact.html">contact page</a> to see how I can help bring your vision to life.</p>
           </div>
         </div>
-      </section>
+      </div>
     </main>
     <div id="side-nav" class="hidden">
       <ul>
+        <li><a href="/pages/collections.html">the projects</a></li>
         <li><a href="/pages/project1/project1-intro.html#the-menu">the "menu"</a></li>
         <li><a href="https://github.com/Allison2002/tech-trends.git">the code</a></li>
         <li><a href="/pages/project1/project1-the-grade.html">the grade</a></li>
+        <li><a href="/pages/project1/project1-the-design.html">the design</a></li>
         <li><a href="/pages/project1/project1-the-casestudy.html">the casestudy</a></li>
-        <li><a href="#contact">contact me</a></li>
+        <li><a href="#author-bio">contact me</a></li>
       </ul>
     </div>
     <div>
       <button class="back-to-top" id="back-to-top" class="hidden">back to top</button>
     </div>
     <footer id="nav">
-      <div class="footer-logo">
-        <img       
-          src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto:best,c_fill,w_1225,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
-          alt="Photo of Genny Allison, the web developer and AI content specialist"
-          width="384"
-          height="240"
-          loading="lazy"
-          fetchpriority="low"
-          style="object-fit: contain; aspect-ratio: 16 / 10;"
-          decoding="async" 
-        />
-      </div>
-      <div class="footer-links" id="footer-links">
-        <ul>
-          <li><a href="/index.html" class="links">my home</a></li>           
-          <li><a href="/pages/about.html" class="links">about me</a></li>
-          <li><a href="/pages/skills.html" class="links">my skills</a></li>
-          <li><a href="/pages/resume.html" class="links">my resume</a></li>
-          <li><a href="/pages/portfolio.html" class="links">my work</a></li> 
-          <li><a href="/pages/contact.html" class="links">contact me</a></li>
-        </ul>
-      </div>
-      <div class="social-media">
-        <ul>
-          <li>
-            <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/x-bird-icon.webp" 
-                alt="X (Twitter) logo"
-                width: 2.5rem;
-                height: 2.5rem;
-                aspect-ratio: 1 / 1;
-              >
-            </a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/ig-icon.webp" 
-                alt="Instagram logo"
-                width: 2.5rem;
-                height: 2.5rem;
-                aspect-ratio: 1 / 1;
-              >
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/linkedin-icon.webp" 
-                alt="LinkedIn logo"
-                width: 2.5rem;
-                height: 2.5rem;
-                aspect-ratio: 1 / 1;
-              >
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
-              <img src="/img/git-icon.webp" 
-                alt="GitHub logo"width: 2.5rem;
-                height: 2.5rem;
-                aspect-ratio: 1 / 1;
-              >
-            </a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+        <div class="footer-logo">
+          <picture> 
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_786,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 1200px)"
+              sizes="100vw"
+            />
+            <source
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_50,c_fill,w_768,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              type="image/avif"
+              media="(min-width: 481px) and (max-width: 1199px)"
+              sizes="100vw"
+            />
+            <img       
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_500,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif"
+              alt="Photo of Genny Allison, the web developer and AI content specialist"
+              width="250"
+              height="109"
+              loading="lazy"
+              fetchpriority="low"
+              decoding="async" 
+            />
+          </picture>
+        </div>
+        <div class="footer-links" id="footer-links">
+          <ul>
+            <li><a href="/index.html" class="links">my home</a></li>           
+            <li><a href="/pages/about.html" class="links">about me</a></li>
+            <li><a href="/pages/skills.html" class="links">my skills</a></li>
+            <li><a href="/pages/resume.html" class="links">my resume</a></li>
+            <li><a href="/pages/collections.html" class="links">my work</a></li> 
+            <li><a href="/pages/project1/project1-intro.html#author-bio" class="links">contact me</a></li>
+          </ul>
+        </div>
+        <div class="social-media">
+          <ul>
+            <li>
+              <a href="https://x.com/allis78978" class="links" aria-label="Visit my X (formerly Twitter) profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/x-bird-icon.webp" 
+                  alt="X (Twitter) logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/allison_stock_inc/" class="links" aria-label="Visit my Instagram profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/ig-icon.webp" 
+                  alt="Instagram logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/genny-allison/" class="links" aria-label="Visit my LinkedIn profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/linkedin-icon.webp" 
+                  alt="LinkedIn logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/Allison2002" class="links" aria-label="Visit my GitHub profile" target="_blank" rel="noopener noreferrer">
+                <img src="/img/github-icon.avif" 
+                  alt="GitHub logo"
+                  width: 2.5rem;
+                  height: 2.5rem;
+                  loading="auto"  
+                  style="aspect-ratio: 40 / 40; object-fit: contain;"
+                  fetchpriority="auto"
+                  decoding="async"
+                >
+              </a>
+            </li>
+          </ul>
+        </div>
+      </footer>
     <script src="/assets/script.js" defer></script>
   </body>
 </html>      
