made adjustements to images to ensure responsiveness

--- a/pages/project1/project1-the-design.html
+++ b/pages/project1/project1-the-design.html
@@ -70,47 +70,18 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "name": "Tech Trends Project Case Study | Genny Allison",
-        "url": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html",
-        "description": "Explore Genny Allison’s Tech Trends Project—an AI-powered case study featuring SEO-optimized content, responsive design, and lightning-fast performance.",
-        "inLanguage": "en",
-        "datePublished": "2024-11-15",
-        "dateModified": "2025-05-19",
-        "isPartOf": {
-          "@type": "Blog",
-          "name": "Tech Trends Blog",
-          "url": "https://tech-trends-blog.netlify.app"
-        },
-        "breadcrumb": {
-          "@type": "BreadcrumbList",
-          "itemListElement": [
-            {
-              "@type": "ListItem",
-              "position": 1,
-              "name": "Home",
-              "item": "https://tech-trends-blog.netlify.app"
-            },
-            {
-              "@type": "ListItem",
-              "position": 2,
-              "name": "Projects",
-              "item": "https://tech-trends-blog.netlify.app/projects"
-            },
-            {
-              "@type": "ListItem",
-              "position": 3,
-              "name": "Tech Trends Case Study",
-              "item": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html"
-            }
-          ]
-        },
+        "name": "Tech Trends Project | The Design",
+        "url": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html",
+        "description": "Explore the design behind the Tech Trends Project by Genny Allison. This page highlights AI-powered layout, SEO-optimized visuals, responsive design techniques, and WCAG accessibility.",
+        "datePublished": "2025-05-28",
         "author": {
           "@type": "Person",
           "name": "Genny Allison",
           "url": "https://gennyallison.netlify.app",
-          "jobTitle": "Front-End Developer & AI Content Specialist",
           "sameAs": [
             "https://www.linkedin.com/in/genny-allison/",
+            "https://x.com/allis78978",
+            "https://www.instagram.com/allison_stock_inc/",
             "https://github.com/Allison2002"
           ]
         },
@@ -120,49 +91,48 @@
           "url": "https://gennyallison.netlify.app",
           "logo": {
             "@type": "ImageObject",
-            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/v1746550616/allisonstock-black-logo_yalqqx.avif",
-            "width": 531,
-            "height": 255
+            "url": "https://res.cloudinary.com/dnptzisuf/image/upload/fl_progressive,f_auto,q_auto,c_fill,w_500,dpr_auto,fl_lossy,fl_force_strip/v1746550266/allisonstock-logo_xgohg9.avif",
+            "width": 500,
+            "height": 109
           }
         },
-        "image": {
-          "@type": "ImageObject",
-          "url": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
-          "width": 748,
-          "height": 400,
-          "caption": "Hero image of Tech Trends Project Case Study",
-          "encodingFormat": "image/avif"
-        },
         "mainEntity": {
-          "@type": "BlogPosting",
-          "headline": "Tech Trends Project Case Study",
-          "alternativeHeadline": "AI Content Creation, SEO Optimization & Responsive Web Design by Genny Allison",
-          "articleSection": "Case Study",
-          "genre": ["Technology", "AI Content", "SEO", "Web Design", "Development"],
-          "keywords": [
-            "AI-generated content for websites",
-            "SEO content specialist",
-            "AI content creation portfolio",
-            "SEO case study blog",
-            "fast-loading website design"
-          ],
-          "author": {
-            "@type": "Person",
-            "name": "Genny Allison"
-          },
-          "publisher": {
-            "@type": "Organization",
-            "name": "Allison Stock Inc."
-          },
-          "datePublished": "2024-11-15",
-          "dateModified": "2025-05-19",
-          "image": "https://res.cloudinary.com/dnptzisuf/image/upload/f_auto,q_auto,c_fill,w_1500,dpr_auto,fl_lossy,fl_force_strip/v1747014432/welcome_to_tech_trends_project1_fsmzet.avif",
-          "url": "https://tech-trends-blog.netlify.app/projects/project1-the-casestudy.html",
-          "description": "Case study of Tech Trends Blog by Genny Allison, highlighting AI-generated content, SEO strategies, performance optimization, and accessible web development."
+          "@type": "CreativeWork",
+          "name": "Tech Trends Blog",
+          "url": "https://tech-trends-blog.netlify.app",
+          "description": "An AI-powered SEO blog highlighting the latest trends in digital design, technology, and content strategy."
+        },
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://gennyallison.netlify.app/"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Projects",
+              "item": "https://gennyallison.netlify.app/pages/collections.html"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Tech Trends Project",
+              "item": "https://tech-trends-blog.netlify.app"
+            },
+            {
+              "@type": "ListItem",
+              "position": 4,
+              "name": "The Design",
+              "item": "https://tech-trends-blog.netlify.app/pages/project1/project1-the-design.html"
+            }
+          ]
         }
       }
     </script>
-
     <style>
       .canvas-skills-grid {
         display: flex;
@@ -464,8 +434,9 @@
     <main class="about-me" id="projects">
       <div class="projects-content">
         <div class="resume-date fancy-border project-title" id="description">
-        <h2>project 1 | the design</h2>
-        <h2>past meets future</h2>
+          <h2>project 1 | the design</h2>
+          <h2>past meets future</h2>
+        </div>
       </div>
       <div class="past-meets-design">
         <div class="past-meets-future fancy-border-img">
