made some adjustments to image css and added explicit sizing to html

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -443,7 +443,7 @@
         </div>
       </div>
       <div class="the-grade">
-        <div class="grade-img fancy-border-img" id="grade-img">
+        <div class="website-grade fancy-border-img">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1743469949/seo-grade_mmztmf.avif"
@@ -460,11 +460,11 @@
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_256/v1743469949/seo-grade_mmztmf.avif"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
-              width="100%"
-              height="auto"
-              loading="auto"  
-              style=" object-fit: contain;"
-              fetchpriority="auto"
+              width="232"
+              height="193"
+              style="object-fit: contain; aspect-ratio: 232 / 193;"
+              loading="lazy"
+              fetchpriority="low"
               decoding="async"
             />
           </picture>
