small image size adjustments

--- a/pages/project1/project1-the-grade.html
+++ b/pages/project1/project1-the-grade.html
@@ -446,19 +446,19 @@
         <div class="website-grade fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_651/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_300/v1743469949/seo-grade_mmztmf.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_347/v1743469949/seo-grade_mmztmf.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_256/v1743469949/seo-grade_mmztmf.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_232/v1743469949/seo-grade_mmztmf.avif"
               alt="Tech Trends Blog SEO grade result showing performance and optimization"
               width="232"
               height="193"
@@ -505,13 +505,13 @@
         <div class="grade-table fancy-border-img">
           <picture>
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1747614027/desktop-grades_kretmv.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_651/v1747614027/desktop-grades_kretmv.avif"
               type="image/avif"
               media="(min-width: 1200px)"
               sizes="100vw"
             />
             <source
-              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_355/v1747614880/desktop-grade-tablet_koy6mo.avif"
+              srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_347/v1747614880/desktop-grade-tablet_koy6mo.avif"
               type="image/avif"
               media="(min-width: 481px) and (max-width: 1199px)"
               sizes="100vw"
@@ -519,9 +519,9 @@
             <img 
               src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222/v1747614880/desktop-grade-mobile_rs4bmo.avif"
               alt="Tech Trends Blog SEO Desktop grade result showing performance after optimization"
-              width="222"
-              height="185"
-              style="object-fit: contain; aspect-ratio: 222 / 185;"
+              width="248"
+              height="205"
+              style="object-fit: contain; aspect-ratio: 248 / 205;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -546,11 +546,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_232/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_248/v1742916681/tech-trends-start-desktop_cbbbqf.avif"
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
-              width="100%"
-              height="auto"
-              style="object-fit: cover;"
+              width="248"
+              height="255"
+              style="object-fit: cover; aspect-ratio: 248 / 255;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -576,11 +576,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_232/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_248/v1742916681/tech-trends-finish-desktop_dctwrz.avif"
               alt="Tech Trends Blog SEO grade result showing performance after optimization"
-              width="232"
-              height="auto"
-              style="object-fit: cover;"
+              width="248"
+              height="255"
+              style="object-fit: cover; aspect-ratio: 248 / 255;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -606,11 +606,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222/v1747614880/mobile-grade-tablet_xbb08y.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_248/v1747614880/mobile-grade-tablet_xbb08y.avif"
               alt="Tech Trends Blog SEO Mobile grade result showing performance after optimization"
-              width="232"
-              height="239"
-              style="object-fit: contain; aspect-ratio: 232 / 239;"
+              width="248"
+              height="255"
+              style="object-fit: cover; aspect-ratio: 248 / 255;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -635,11 +635,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_232/v1742916681/tech-trends-start-mobile_beu2ct.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_248/v1742916681/tech-trends-start-mobile_beu2ct.avif"
               alt="Tech Trends Blog SEO Mobile grade result showing performance before optimization"
-              width="232"
-              height="239"
-              style="object-fit: cover;"
+              width="248"
+              height="255"
+              style="object-fit: cover; aspect-ratio: 248 / 255;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -668,7 +668,7 @@
               alt="Tech Trends Blog SEO grade result showing performance before optimization"
               width="232"
               height="239"
-              style="object-fit: cover;"
+              style="object-fit: cover; aspect-ratio: 232 / 239;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
