created project2 grade

--- a/img/project1/project1-the-grade.html
+++ b/img/project1/project1-the-grade.html
@@ -452,12 +452,12 @@
       </div>
     </header>
     <main class="about-me" id="projects">
-      <div class="the-grade">
-        <div class="projects-content">
-          <div class="resume-date fancy-border project-title" id="description">
-            <h2>project 1 | the grade</h2>
-          </div>
+      <div class="projects-content">
+        <div class="resume-date fancy-border project-title" id="description">
+          <h2>project 1 | the grade</h2>
         </div>
+      </div>
+      <div class="the-grade">
         <div class="website-grade fancy-border-img">
           <picture>
             <source
@@ -517,7 +517,7 @@
           <h2>the grade: desktop</h2>
           <h2><i>page speed insights</i></h2>
         </div>
-        <div class="grade-table fancy-border-img" id="tt-grade-table1">
+        <div class="grade-table fancy-border-img">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_651/v1747614027/desktop-grades_kretmv.avif"
@@ -532,11 +532,14 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640/v1747614880/desktop-grade-mobile_rs4bmo.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_222/v1747614880/desktop-grade-mobile_rs4bmo.avif"
               alt="SEO Desktop performance result after AI content and PageSpeed optimization on Tech Trends Blog"
-              width="320"
-              height="274"
-              style="object-fit: contain; aspect-ratio: 320 / 274; "
+              width="248"
+              height="205"
+              style="object-fit: contain; aspect-ratio: 248 / 205;"
+              loading="lazy"
+              fetchpriority="low"
+              decoding="async"
             />
           </picture>
         </div>
@@ -603,7 +606,7 @@
           <h2>the grade: mobile</h2>
           <h2>page speed insights</h2>
         </div>
-        <div class="grade-container grade-table fancy-border-img" id="tt-grade-table2">
+        <div class="grade-container grade-table fancy-border-img">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1747614027/mobile-grades_upcfff.avif"
@@ -618,11 +621,11 @@
               sizes="100vw"
             />
             <img 
-              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_640/v1747614880/mobile-grade-tablet_xbb08y.avif"
+              src="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_auto,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_248/v1747614880/mobile-grade-tablet_xbb08y.avif"
               alt="Tech Trends Blog SEO Mobile grade result showing performance after optimization"
-              width="320"
-              height="274"
-              style="object-fit: contain; aspect-ratio: 320 / 274;"
+              width="248"
+              height="255"
+              style="object-fit: cover; aspect-ratio: 248 / 255;"
               loading="lazy"
               fetchpriority="low"
               decoding="async"
@@ -691,7 +694,7 @@
           <h2>the grade:</h2>
           <h2>hubspot</h2>
         </div>
-        <div class="hubspot-container fancy-border-img" id="hubspot-img">
+        <div class="hubspot-container fancy-border-img" id="pagespeed4">
           <picture>
             <source
               srcset="https://res.cloudinary.com/dnptzisuf/image/upload/f_avif,q_40,fl_lossy,fl_force_strip,dpr_auto,c_fill,g_auto,w_659/v1732986926/hubspot-grade_hnuolf.avif"
