--- a/pages/collections.html
+++ b/pages/collections.html
@@ -234,7 +234,7 @@
         </div>
         <div class="collection-thumbnail-box">
           <div class="collections-title fancy-border-title">
-          <h2><a href="/pages/project2.html">project 2</a></h2>
+          <h2><a href="/pages/project2/project2-intro.html">project 2</a></h2>
           </div>
           <div class="collections-container">
             <div class="collections-thumbnail fancy-border-img">
