--- a/pages/project2.html
+++ b/pages/project2.html
@@ -8,7 +8,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore Genny Allison's portfolio showcasing projects that merge creativity and code. From engaging animations to responsive designs, each project highlights her skills in UI/UX, front-end development, and client-focused web solutions. Discover the blend of artistry and functionality across a range of digital creations.">
     <link class="tab-logo" rel="icon" href="/img/white_favicon/favicon.ico" type="image/icon type">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="preload" href="/styles/styles-article.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles-global.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles-index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles-index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <link rel="preload" href="/styles/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+
+    <noscript><link rel="stylesheet" href="/styles/styles-article.css"></noscript>
+
+    <noscript><link rel="stylesheet" href="/styles/styles-global.css"></noscript>
+
+
     <link href="https://fonts.cdnfonts.com/css/tt-norms-pro" rel="stylesheet">
   </head>
   <script type="application/ld+json">
@@ -195,37 +211,37 @@
 
                   <div class="grade-item"><h3>Homepage</h3></div>
                   <div class="grade-item"><p>100</p></div>
-                  <div class="grade-item"><p>97<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>All Videos</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>97<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Sports Hub</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>98<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Video Category Pages</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>98<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Log In Page</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>98<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Contact Us</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>91<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>                  
                 </div>
@@ -282,38 +298,38 @@
                 <div class="grade-header"><h3>SEO</h3></div>
 
                 <div class="grade-item"><h3>Homepage</h3></div>
-                <div class="grade-item"><p>99</p></div>
-                <div class="grade-item"><p>98<p></div>
+                <div class="grade-item"><p>100</p></div>
+                <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
 
                 <div class="grade-item"><h3>All Videos</h3></div>
-                <div class="grade-item"><p>99<p></div>
-                <div class="grade-item"><p>98<p></div>
+                <div class="grade-item"><p>100<p></div>
+                <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
 
                 <div class="grade-item"><h3>Sports Hub</h3></div>
-                <div class="grade-item"><p>98<p></div>
+                <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
                 <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Video Category Pages</h3></div>
-                  <div class="grade-item"><p>98<p></div>
-                  <div class="grade-item"><p>98<p></div>
+                  <div class="grade-item"><p>100<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Log In Page</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>98<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
 
                   <div class="grade-item"><h3>Contact Us</h3></div>
                   <div class="grade-item"><p>100<p></div>
-                  <div class="grade-item"><p>98<p></div>
+                  <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div>
                   <div class="grade-item"><p>100<p></div> 
               </div>
